--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,18 @@
     "jsx": "react",
     "module": "esnext",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
     "noFallthroughCasesInSwitch": true,
     "noUnusedParameters": false,
     "skipLibCheck": true,
     "sourceMap": false,
-    "target": "es2019",
-    "lib": ["dom", "es2019"],
+    "target": "es2022",
+    "lib": ["dom", "es2023"],
     "rootDir": ".",
     "outDir": "lib",
     "strict": true
-  }
+  },
+  "ts-node": {
+    "esm": true,
+    "swc": true,
+  },
 }
