--- a/.github copy/workflows/versionUp.yml
+++ b/.github copy/workflows/versionUp.yml
@@ -9,21 +9,16 @@ jobs:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Git Config
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-          git config --global user.email "actions@gihub.com"
-          git config --global user.name "gh-actions"
       - uses: actions/checkout@v3
         with:
           ref: main
-      - uses: pnpm/action-setup@v2.1.0
+      - uses: ./.github/actions/initialize
+      - uses: pnpm/action-setup@v2.2.2
         with:
-          version: 6.32.3
+          version: 8.15.1
       - uses: actions/setup-node@v2
         with:
-          node-version: "16.x"
+          node-version: "20.x"
           cache: "pnpm"
       - run: pnpm i --frozen-lockfile
       - name: Auto version update
