--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": "https://github.com/Himenon"
   },
   "sideEffects": false,
+  "type": "module",
   "main": "./lib/$cjs/index.js",
   "module": "./lib/$esm/index.js",
   "types": "./lib/$types/index.d.ts",
@@ -73,6 +74,7 @@
     "npm-run-all": "4.1.5",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.9.0",
+    "swagger2openapi": "^7.0.8",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "typescript": "5.3.3",
